# CampusMaps

./: .env.example  .gitignore  AGENTS.md  CONTRIBUTING.md  Cargo.toml  Dockerfile  LICENSE  Makefile  README.md  build.rs  docker-compose.yml
config/: default.toml  valhalla.json
data/custom_paths/: medilag_campus.geojson
mobile/: .gitignore  pubspec.yaml
mobile/lib/: main.dart
mobile/lib/models/: route_request.dart  route_response.dart
mobile/lib/screens/: map_screen.dart
mobile/lib/services/: routing_service.dart
mobile/lib/utils/: polyline_decoder.dart
mobile/lib/widgets/: directions_panel.dart  route_settings.dart
proto/runit_maps/v1/: routing.proto
scripts/: geojson_to_osm.py  visualizer.html
src/: lib.rs  main.rs
src/api/: admin_service.rs  mod.rs  rest_bridge.rs  routing_service.rs
src/common/: build_state.rs  error.rs  metrics.rs  mod.rs  polyline.rs  telemetry.rs
src/config/: mod.rs
src/ingestion/: geojson.rs  mod.rs  osm.rs  regional_config.rs  tile_builder.rs
src/routing/: client.rs  mod.rs  response_parser.rs  validator.rs
valhalla/: Dockerfile.valhalla
valhalla/campus_cost/: CMakeLists.txt  campus_pedestrian.cc  campus_pedestrian.h
