[package]
name = "runit-maps"
version = "0.1.0"
edition = "2021"
description = "RunIt Maps — Custom campus routing microservice powered by Valhalla"

[dependencies]
clap = { version = "4", features = ["derive"] }
tonic = "0.12"
prost = "0.13"
tokio = { version = "1", features = ["full"] }
reqwest = { version = "0.12", features = ["json"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["json", "env-filter"] }
config = "0.14"
polyline = "0.10"
geo-types = "0.7"
thiserror = "2"
anyhow = "1"
uuid = { version = "1", features = ["v4"] }
metrics = "0.24"
metrics-exporter-prometheus = "0.16"

[build-dependencies]
tonic-build = "0.12"

[dev-dependencies]
tower = "0.5"

[profile.release]
opt-level = 3
lto = "fat"
codegen-units = 1
